--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   },
   "devDependencies": {
     "@vuepress/client": "^2.0.0-beta.49",
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.51",
     "vue": "^3.2.36",
     "vuepress": "^2.0.0-beta.49",
     "vuepress-theme-hope": "^2.0.0-beta.90"
+  },
+  "dependencies": {
+    "@vuepress/plugin-external-link-icon": "^2.0.0-beta.29",
+    "@vuepress/plugin-theme-data": "^2.0.0-alpha.25",
+    "bcrypt-ts": "^2.2.0",
+    "vite": "^3.0.9"
   }
 }
