--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "build": "vuepress build docs"
   },
   "devDependencies": {
-    "@vuepress/client": "^2.0.0-beta.49",
-    "vue": "^3.2.36",
-    "vuepress": "^2.0.0-beta.49",
-    "vuepress-theme-hope": "^2.0.0-beta.90"
-  },
-  "dependencies": {
-    "@vuepress/plugin-external-link-icon": "^2.0.0-beta.29"
+    "@vuepress/client": "2.0.0-beta.51",
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.51",
+    "vue": "^3.2.27",
+    "vuepress": "2.0.0-beta.51",
+    "vuepress-theme-hope": "2.0.0-beta.97"
   }
 }
