--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "lx-music-docs",
-  "version": "2.3.5",
+  "name": "lx-music-doc",
+  "version": "2.0.0-beta.1",
   "description": "lx-music-docs",
   "license": "apache-2.0",
   "type": "module",
   "scripts": {
-    "docs:build": "vuepress build src",
-    "docs:clean-dev": "vuepress dev src --clean-cache",
-    "docs:dev": "vuepress dev src",
     "build": "vuepress build src",
     "dev": "vuepress dev src"
   },
