--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lx-music-doc",
-  "version": "2.0.0-beta.1",
+  "version": "2.5.0",
   "description": "lx-music-docs",
   "license": "apache-2.0",
   "type": "module",
