--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  deploy-gh-pages:
+  build-docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -39,3 +39,12 @@ jobs:
           # 这是文档部署到的分支名称
           branch: gh-pages
           folder: src/.vuepress/dist
+
+      - name: 部署文档至服务器
+        uses: wlixcc/SFTP-Deploy-Action@v1.0
+        with:
+          username: 'root' #ssh user name
+          server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
+          local_path: './src/.vuepress/dist/*' # 对应我们项目build的文件夹路径
+          remote_path: '/servers/doc/test'
