--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "lx-music-doc",
-  "version": "2.5.0",
-  "description": "lx-music-docs",
-  "license": "apache-2.0",
+  "name": "lx-music-docs",
+  "version": "2.0.0",
+  "description": "落雪音乐助手文档",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "build": "vuepress build src",
     "dev": "vuepress dev src"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.51",
-    "@vuepress/plugin-docsearch": "^2.0.0-beta.51",
-    "vue": "^3.2.29",
-    "vuepress": "2.0.0-beta.51",
-    "vuepress-theme-hope": "2.0.0-beta.108"
+    "@vuepress/client": "2.0.0-beta.59",
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.59",
+    "vue": "^3.2.45",
+    "vuepress": "2.0.0-beta.59",
+    "vuepress-theme-hope": "2.0.0-beta.145"
   }
 }
