--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "vuepress build src",
-    "dev": "vuepress dev src"
+    "build": "vuepress-webpack build src",
+    "dev": "vuepress-vite dev src"
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.59",
@@ -14,5 +14,9 @@
     "vue": "^3.2.45",
     "vuepress": "2.0.0-beta.59",
     "vuepress-theme-hope": "2.0.0-beta.145"
+  },
+  "dependencies": {
+    "vuepress-vite": "^2.0.0-beta.59",
+    "vuepress-webpack": "^2.0.0-beta.59"
   }
 }
