--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuepress-theme-hope": "2.0.0-beta.145"
   },
   "dependencies": {
+    "axios": "^1.3.0",
     "vuepress-vite": "^2.0.0-beta.59",
     "vuepress-webpack": "^2.0.0-beta.59"
   }
