--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "dev": "vuepress-vite dev src"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.59",
-    "@vuepress/plugin-docsearch": "^2.0.0-beta.59",
-    "vue": "^3.2.45",
-    "vuepress": "2.0.0-beta.59",
-    "vuepress-theme-hope": "2.0.0-beta.145"
+    "@vuepress/client": "2.0.0-beta.60",
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.60",
+    "vue": "^3.2.47",
+    "vuepress": "2.0.0-beta.60",
+    "vuepress-theme-hope": "2.0.0-beta.174"
   },
   "dependencies": {
     "axios": "^1.3.0",
-    "vuepress-vite": "^2.0.0-beta.59",
-    "vuepress-webpack": "^2.0.0-beta.59"
+    "vuepress-vite": "2.0.0-beta.60",
+    "vuepress-webpack": "2.0.0-beta.60"
   }
 }
