--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "2.0.5",
   "description": "落雪音乐助手文档",
   "license": "MIT",
-  "type": "module",
   "scripts": {
-    "build": "vuepress-webpack build src",
-    "dev": "vuepress-vite dev src"
+    "build": "vuepress-vite build src",
+    "build:debug": "vuepress-vite build src --debug",
+    "dev": "vuepress-vite dev src",
+    "dev:debug": "vuepress-vite dev src --debug"
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.60",
     "@vuepress/plugin-docsearch": "^2.0.0-beta.60",
+    "naive-ui": "^2.34.3",
+    "unplugin-auto-import": "^0.14.3",
+    "unplugin-vue-components": "^0.24.0",
     "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.60",
     "vuepress-theme-hope": "2.0.0-beta.174"
   },
   "dependencies": {
     "axios": "^1.3.0",
+    "lodash": "^4.17.21",
     "vuepress-vite": "2.0.0-beta.60",
     "vuepress-webpack": "2.0.0-beta.60"
   }
