--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,38 +3,11 @@ name: Deploy Docs
 on:
   push:
     branches:
-      - main
+      - dist
 
 jobs:
-  Deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: npm
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build Docs
-        env:
-          NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
-          npm run build
-          > src/.vuepress/dist/.nojekyll
-
-      - name: Deploy Docs
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: dist
-          folder: src/.vuepress/dist
-
       - name: Deploy Docs To Server
-        run: curl ${{ secrets.UPDATE_URL }}
+        run: curl ${{ secrets.SERVER_UPDATE_URL }}
