--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "dev:debug": "vuepress-vite dev src --debug"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.60",
-    "@vuepress/core": "^2.0.0-beta.60",
-    "@vuepress/plugin-docsearch": "^2.0.0-beta.60",
+    "@vuepress/client": "2.0.0-beta.61",
+    "@vuepress/core": "2.0.0-beta.61",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.61",
     "unplugin-auto-import": "^0.14.3",
     "unplugin-vue-components": "^0.24.0",
     "vue": "^3.2.47",
-    "vuepress": "2.0.0-beta.60",
-    "vuepress-theme-hope": "2.0.0-beta.174"
+    "vuepress": "2.0.0-beta.61",
+    "vuepress-theme-hope": "2.0.0-beta.203"
   },
   "dependencies": {
     "naive-ui": "^2.34.3",
     "axios": "^1.3.0",
     "lodash": "^4.17.21",
-    "vuepress-vite": "2.0.0-beta.60",
-    "vuepress-webpack": "2.0.0-beta.60"
+    "vuepress-vite": "2.0.0-beta.61",
+    "vuepress-webpack": "2.0.0-beta.61"
   }
 }
